--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ function displayMessage() {
 </script>
 </head>
 <body>
-  <h2 class="center-text font-montserrat">Man and machine backgammon battle</h2>
-  <p class="center-text">Let's Get Start!</p>
+  <h2 class="center-text font-montserrat">Man-machine Gomoku battle</h2>
+  <p class="center-text">Do You Want to Try? Let's Get Start!</p>
   <div class="center-text">
     <a href="https://godmakerr.github.io/godmakerr.gthub.io/" class="boxed-link">START</a>
   </div>
@@ -73,13 +73,12 @@ function displayMessage() {
     <img src="ims.png" alt="Footer Image">
   </div>
   <div class="button-container">
-    <button onclick="displayMessage()">Learn about the rules</button>
+    <button onclick="displayMessage()">Learn about the Gomoku</button>
   </div>
   <ul id="message" class="center-text hidden-message rule-list">
-    <li>The competition adopts a single-game elimination system. The top two teams in the group advance to the semifinals for a cross-elimination round, with the winner competing for the championship and the loser competing for third place.</li>
-    <li>The first round of the game is limited to 15 minutes per person, from the second round of the game to 30 minutes per person, and from the final round to 45 minutes per person.</li>
-    <li>Black first, white first, starting from Tian Yuan, falling in order with each other.</li>
-    <li>The first side to form a continuous five pieces of the same color or more than five pieces [only for white chess] on the board horizontally, vertically or obliquely wins. If the winner cannot be decided within the specified time limit, the one with less time in the game wins.</li>
+    <li>Gomoku is a two-player game of pure strategy board games, usually both sides use black and white pieces, take turns at the intersection of the straight line and the horizontal line on the board, and first form a 5-child connection on the horizontal line, straight line or diagonal line wins.　　</li>
+    <li>Chess: Kuroko goes first, and one person takes turns to play at the empty point of the board.</li>
+    <li>Win: Win by connecting five or more pieces in any horizontal or oblique direction. (Long Company is still considered a victory)</li>
   </ul>
 </body>
 </html>
